@@ -188,108 +188,108 @@ of the ACE, TAO, and CIAO micro release kit is available for
   <A HREF="ftp://download.dre.vanderbilt.edu/diffs">this location</A>.
 </P>
 
-<LI> <B>Latest Release.</B> The latest release is ACE 5.7, TAO 1.7, and CIAO 0.7
-(ACE+TAO+CIAO x.7), please use the links below to download it.<i>ACE+TAO+CIAO x.7 is the same as the micro release x.7.0</i><P>
+<LI> <B>Latest Release.</B> The latest release is ACE 5.8, TAO 1.8, and CIAO 0.8
+(ACE+TAO+CIAO x.8), please use the links below to download it.<i>ACE+TAO+CIAO x.8 is the same as the micro release x.8.0</i><P>
 
 <TABLE BORDER="4">
   <TR><TH>Filename</TH><TH>Description</TH><TH>Full</TH><TH>Sources only</TH></TR>
   <TR><TD>ACE+TAO+CIAO-5.7.tar.gz</TD>
       <TD>ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.0.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.0.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.0.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.0.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.0.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.0.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO-5.7.tar.bz2</TD>
       <TD>ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.0.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.0.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO-5.7.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.8.0.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.8.0.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO-5.7.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.0.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.0.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.0.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.0.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.0.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.0.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO-5.7.tar.bz2</TD>
       <TD>ACE+TAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.0.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.0.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO-5.7.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.8.0.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.8.0.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.7-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.0.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.7-html.tar.bz2</TD>
       <TD>Doxygen documentation for ACE+TAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.0.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.7-html.zip</TD>
       <TD>Doxygen documentation for ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.8.0.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.7.tar.gz</TD>
       <TD>ACE only (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.0.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.0.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.0.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.0.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.0.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.0.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.0.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.7.tar.bz2</TD>
       <TD>ACE only (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.0.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.0.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.0.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.0.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.0.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.7.zip</TD>
       <TD>ACE only (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.8.0.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.0.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.0.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.0.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.8.0.zip">FTP</A>]
       </TD>
   </TR>
 </TABLE>
